# wireless-esp32-tools

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  partitions.csv  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  main.yml
components/DAP/: CMakeLists.txt  DAP_config.h
components/DAP/cmsis-dap/include/: cmsis_compiler.h  gpio_common.h  gpio_op.h  swo.h
components/DAP/cmsis-dap/source/: DAP.c  DAP_vendor.c  JTAG_DP.c  SWO.c  SW_DP.c  UART.c  dap_utility.c  spi_op.c  spi_switch.c
components/DAP/source/: SWO.c
components/SSDP/: CMakeLists.txt  ssdp.c  ssdp.h
components/USBIP/: CMakeLists.txt  usb_descriptor.c  usb_handle.c
components/dap_proxy/: CMakeLists.txt  DAP_handle.c  DAP_handle.h  corsacOTA.h  proxy_server_conf.h  tcp_server.c  usbip_server.c  websocket_server.c
components/elaphureLink/: elaphureLink_protocol.c  elaphureLink_protocol.h
components/global_resource/: CMakeLists.txt  global_module.c  global_module.h
components/memory_pool/: memory_pool.c  memory_pool.h
components/uart_tcp_bridge/: CMakeLists.txt  uart_tcp_bridge.c  uart_tcp_bridge.h
components/utils/: CMakeLists.txt  list.h
main/: idf_component.yml  kcp_server.c  main.c  tcp_netconn.c  tcp_server.c  wifi_configuration.h  wifi_handle.c
project_components/api_router/: CMakeLists.txt  api_json_module.c  api_json_module.h  api_json_router.c  api_json_router.h
project_components/html/: CMakeLists.txt
project_components/request_runner/: CMakeLists.txt  request_runner.c  request_runner.h
project_components/static_buffer/: static_buffer.c  static_buffer.h
project_components/web_server/: CMakeLists.txt  web_server.c  web_server.h  web_uri_module.c  web_uri_module.h
project_components/web_server/uri_modules/: uri_api.c  uri_html_base.c  uri_ws.c
project_components/wifi_manager/: CMakeLists.txt  wifi_api.c  wifi_api.h  wifi_api_json.c  wifi_api_json.h  wifi_configuration.h  wifi_event_handler.c  wifi_event_handler.h  wifi_json_utils.c  wifi_json_utils.h  wifi_manager.c  wifi_manager.h  wifi_storage.c  wifi_storage.h  wifi_storage_priv.h
project_components/wt_common/: CMakeLists.txt  wt_data_def.h
project_components/wt_mdns/: CMakeLists.txt  wt_mdns_config.c  wt_mdns_config.h
project_components/wt_storage/: CMakeLists.txt  wt_nvs.c  wt_nvs.h  wt_storage.c  wt_storage.h
project_components/wt_system/: CMakeLists.txt  wt_system.c  wt_system.h  wt_system_api.h  wt_system_api_json.c  wt_system_json_utils.c  wt_system_json_utils.h
